--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine on
 RewriteBase /
-
+Redirect localhost/cves/ localhost
+Redirect localhost/users/ localhost
 # CHANGE ME TO YOUR M: DRIVE ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! #
 php_value auto_prepend_file "C:/xampp/htdocs/loader.php"
